# advancedfx-filmmaker

./: .gitignore  CLAUDE.md  README.md  build.bat  demo_pause  launch.bat  live.bat  mirv_filmmaker cosmetics status  mirv_filmmaker follow status  mirv_filmmaker ui  test-filmmaker.ps1
AfxHookSource2/: CMakeLists.txt  CampathDrawer.cpp  CampathDrawer.h  ClientEntitySystem.cpp  ClientEntitySystem.h  DeathMsg.cpp  DeathMsg.h  GameEvents.cpp  RenderSystemDX11Hooks.cpp  SchemaSystem.cpp  SchemaSystem.h  ViewModel.cpp  ViewportScaler.cpp  ViewportScaler.h  main.cpp
AfxHookSource2/Filmmaker/: CameraEditorCommand.cpp  CameraTimelineCommand.cpp  Filmmaker.cpp  Filmmaker.h  FilmmakerCommand.cpp  FilmmakerCommandUtil.cpp  FilmmakerCommandUtil.h  FollowCommand.cpp  GraphEditorCommand.cpp  MarkerCommand.cpp
AfxHookSource2/Filmmaker/Config/: DemoFolderStore.cpp  DemoFolderStore.h
AfxHookSource2/Filmmaker/Cosmetics/: CosmeticAnimFix.cpp  CosmeticAnimFix.h  CosmeticCatalog.cpp  CosmeticCatalog.h  CosmeticCommands.cpp  CosmeticDebug.cpp  CosmeticDebugLog.cpp  CosmeticDebugLog.h  CosmeticDirectComposite.cpp  CosmeticDirectComposite.h  CosmeticGloveLabels.cpp  CosmeticGloveLabels.h  CosmeticGloveSkinTable.cpp  CosmeticModelSwap.cpp  CosmeticModelSwap.h  CosmeticOverrideSystem.cpp  CosmeticOverrideSystem.h  CosmeticProfile.cpp  CosmeticProfile.h
AfxHookSource2/Filmmaker/Demo/: DemoEntry.h  DemoHeaderReader.cpp  DemoHeaderReader.h  DemoInfoHelper.cpp  DemoInfoHelper.h  DemoInfoReader.cpp  DemoInfoReader.h  DemoLibrary.cpp  DemoLibrary.h  DemoScanner.cpp  DemoScanner.h  PlayingDemoPath.cpp
AfxHookSource2/Filmmaker/Movie/: BodyCam.cpp  BodyCam.h  CamMarkers.cpp  CamMarkers.h  CamPathEval.cpp  CamPathEval.h  CamPlayback.cpp  CamPlayback.h  CameraBridge.h  CameraPath.cpp  CameraPath.h  FollowCamera.cpp  FollowCamera.h  FollowCameraMath.cpp  FollowCameraMath.h  FollowCameraStateJson.cpp  FollowEventIndex.cpp  FollowEventIndex.h  FollowTargetDiscovery.cpp  FollowTargetDiscovery.h  FollowTargetProviders.cpp  FollowTargetProviders.h  MovieMode.cpp  MovieMode.h  ParticleFx.cpp  ParticleFx.h  ViewFx.cpp  ViewFx.h  ViewFxVm.cpp  ViewFxVm.h
AfxHookSource2/Filmmaker/Panorama/: CameraEditorCustomizeJs.h  CameraEditorCustomizeState.cpp  CameraEditorCustomizeState.h  CameraEditorDebugJs.h  CameraEditorFollowInspectorJs.h  CameraEditorHud.cpp  CameraEditorHud.h  CameraEditorJs.h  CameraEditorPathInspectorJs.h  CameraEditorWidgetsJs.h  CameraTimelineHud.cpp  CameraTimelineHud.h  CameraTimelineJs.h  ConfigHud.cpp  ConfigHud.h  ConfigHudJs.h  DemoBarButtons.cpp  DemoBarButtons.h  DemoBarButtonsJs.h  FilmmakerGuiJs.h  FilmmakerMenu.cpp  FilmmakerMenu.h  GraphEditorExperimentHud.cpp  GraphEditorExperimentHud.h  GraphEditorJs.h  MarkerHud.cpp  MarkerHud.h  MarkerHudJs.h  MovieHud.cpp  MovieHud.h  MovieHudJs.h  PanoramaBridge.cpp  PanoramaBridge.h
AfxHookSource2/Filmmaker/Platform/: FolderPicker.cpp  FolderPicker.h  JsonBuilder.cpp  JsonBuilder.h  JsonParser.cpp  JsonParser.h  ProtobufWire.cpp  ProtobufWire.h  TextEncoding.cpp  TextEncoding.h
FilmmakerDemoInfo/: FilmmakerDemoInfo.csproj  Program.cs
FilmmakerDemoInfoGo/: go.mod  main.go  out.json
automation/: AutomationCommon.ps1  README.md  _diag-acct.ps1  _diag-btn.ps1  _diag-btnbox.ps1  _diag-fix.ps1  _diag-float.ps1  _diag-hover.ps1  _diag-hover2.ps1  _diag-len.ps1  _diag-nav.ps1  _diag-nav2.ps1  _diag-nav3.ps1  _diag-nav4.ps1  _diag-tabs.ps1  _inspect-tilecolor.ps1  capture-game-window.ps1  capture-main-monitor.ps1  cs2-live.ps1  cs2-netcon.ps1  filmmaker_test.cfg  fm-eval.ps1  follow-camera-math-tests.cpp  launch-cs2-netcon.ps1  live-ui-editing.md  live.bat  mirv_filmmaker ui  test-filmmaker.ps1  verify-attach-camera-live.ps1  verify-campath.ps1  verify-camtl-shortpath.ps1  verify-demo-transition-guard.ps1  verify-editor-bottom-tabs.ps1  verify-editor-delete-clear.ps1  verify-editor-ui-follow-timeline.ps1  verify-editor-viewport-debug.ps1  verify-editor-viewport-live.ps1  verify-followcam.ps1  verify-grenade-tracking.ps1  verify-live-camtl.ps1  (+2 more)
automation/config/: weapon_mesh_test_paints.json
automation/launch/: cs2-live.ps1  launch-cs2-netcon.ps1
automation/lib/: CosmeticsSpectate.ps1
automation/netcon/: cs2-netcon.ps1
automation/tools/: build_skins_legacy_index.py  build_weapon_moment_run.py  convert-better-particles-source1.ps1  cosmetics_static_probe.py  enrich_scan_moments.py  export-source1-vtf.py  export_test_paints.py  extract_weapon_mesh_test_paints.py  image_diff.py  make_moment_preview.py  parse_skinlog.py  postprocess-better-particles.py  scan_demo_weapon_moments.py  select_mesh_verification_cases.py  validate-better-particles-assets.py  weapon_skin_database.py
automation/verify/: run-cosmetics-pickup-current.ps1  run-cosmetics-weapon-moments.ps1  scan-cosmetics-weapon-moments.ps1  verify-cosmetics-customizer.ps1  verify-cosmetics-flicker-roundskip.ps1  verify-cosmetics-mesh-focused.ps1  verify-cosmetics-mesh-proof.ps1  verify-cosmetics-paintkit-bridge.ps1  verify-cosmetics-pickup-current.ps1  verify-cosmetics-weapon-moments.ps1  verify-customize-preview-pause.ps1  verify-customize-preview.ps1  verify-customize-wear.ps1  verify-glove-skin.ps1  verify-knife-swap-nocrash.ps1  verify-ondatachanged-bisect.ps1
doc/: filmmaker_demos_feature.md  filmmaker_movie_controls.md  panorama_ui_guide.md  panorama_viewmodel_preview.md
docs/: cosmetics-cs2-methodology-notes.md  cosmetics-forum-methodology-notes.md  cosmetics-model-override-research.md  cosmetics-recompose-research.md  cs2_weapon_skins_legacy_index.csv  cs2_weapon_skins_legacy_index.json  cs2_weapon_skins_legacy_index.md  filmmaker_effects_modifiers.md
docs/plans/: camera-editor-camera-graph-ui-redesign.md
documentation/follow camera/: README.md  changelog.md  demo-event-prescan.md  follow-camera-architecture.md  follow-camera-commands.md  (+2 more)
misc/: capture-cs2.ps1  cs2-live.ps1  cs2-netcon.ps1  fm-eval.ps1  gen_glove_skin_table.py  launch-cs2-netcon.ps1  sigscan.py  verify-campath.ps1  verify-moviecam.ps1  verify-watch-ui.ps1
shared/: MirvInput.cpp  MirvInput.h
(+4 files in other folders)
